fix footer overlap

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -8,6 +8,7 @@
   padding-right: 16px;
   word-break: break-word;
   word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 
@@ -27,9 +28,10 @@ $drawer-font-family: monospace;
 }
 
 .drawerLogo {
+  margin: 50px 68px;
   display: flex;
   flex-direction: column;
-  margin: 50px 68px;
+  flex-shrink: 0;
   @media screen and (max-width: 1024px) {
     margin: 25px 34px;
     display: flex;
@@ -55,9 +57,6 @@ $drawer-font-family: monospace;
   margin-left: 86px;
   padding: 0;
   list-style-type: none;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
   @media screen and (max-width: 1024px) {
     margin-left: 56px;
   }
@@ -85,8 +84,11 @@ $drawer-font-family: monospace;
   display: flex;
   font-family: $drawer-font-family;
   font-size: 16px;
-  margin: 0 0 28px 33px;
+  margin: 0 0 28px 40px;
+  flex-grow: 1;
+  flex-shrink: 0;
   color: #666;
+  & > div { display: flex; align-self: flex-end; }
 }
 
 
